<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText android:id="@+id/et_doctor_name"      android:hint="@string/label_name"        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_doctor_surname"   android:hint="@string/label_surname"     android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_doctor_license"   android:hint="@string/label_license"     android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_doctor_specialty" android:hint="@string/label_specialty"   android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_doctor_hiring"    android:hint="@string/label_hiring_date" android:inputType="date" android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <CheckBox android:id="@+id/cb_doctor_active" android:text="@string/label_active"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_doctor_add"
        android:text="@string/action_add"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
