<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText android:id="@+id/et_patient_name"    android:hint="@string/label_name"    android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_patient_surname" android:hint="@string/label_surname" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_patient_email"   android:hint="@string/label_email"   android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_patient_birth"   android:hint="@string/label_birthdate" android:inputType="date" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_patient_weight"  android:hint="@string/label_weight" android:inputType="numberDecimal" android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <CheckBox android:id="@+id/cb_patient_active" android:text="@string/label_active"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_patient_add"
        android:text="@string/action_add"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
